added some headings

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>hello, world</title>
   </head>
   <body>
-
+    <h1>some h1</h1>
+    <h2>some h2</h2>
+    <h3>some h3</h3>
   </body>
 </html>
